fix: aside not showing

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -22,8 +22,7 @@
   }
 
   &:hover,
-  &:has(input:focus)
-   {
+  &:has(input:focus) {
     border-width: 2px;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
